--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
   "name": "Python Microservices Dev",
   "dockerComposeFile": "../docker-compose.yml",
-  "service": "api-gateway",
+  "service": "data-ingestor",
   "workspaceFolder": "/app",
   "customizations": {
     "vscode": {
