--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,6 @@ version: "3.8"
 
 services:
 
-  # MySQL数据库
   mysql:
     image: mysql:8.0
     container_name: mysql
@@ -12,50 +11,116 @@ services:
       MYSQL_DATABASE: stock_data
       MYSQL_USER: stock_user
       MYSQL_PASSWORD: stock_pass
+      TZ: Asia/Tokyo
     ports:
       - "3306:3306"
     volumes:
-      - ./infra/mysql:/docker-entrypoint-initdb.d
       - mysql_data:/var/lib/mysql
     healthcheck:
       test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+      - stock-net
 
-  # Redis缓存
+  phpmyadmin:
+    image: phpmyadmin:latest
+    container_name: phpmyadmin
+    restart: always
+    ports:
+      - "8080:80"
+    environment:
+      PMA_HOST: mysql
+      PMA_PORT: 3306
+      PMA_ARBITRARY: 1
+      TZ: Asia/Tokyo
+    depends_on:
+      - mysql
+    networks:
+      - stock-net
+
   redis:
     image: redis:7
     container_name: redis
     restart: always
     ports:
       - "6379:6379"
+    volumes:
+      - redis_data:/data
+    environment:
+      TZ: Asia/Tokyo
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - stock-net
 
-  # Zookeeper（Kafka依赖）
   zookeeper:
-    image: bitnami/zookeeper:latest
+    image: confluentinc/cp-zookeeper:7.5.3
+    hostname: zookeeper
     container_name: zookeeper
     ports:
       - "2181:2181"
     environment:
-      ALLOW_ANONYMOUS_LOGIN: "yes"
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+      TZ: Asia/Tokyo
+    healthcheck:
+      test: [ "CMD", "echo", "ruok", "|", "nc", "localhost", "2181" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - stock-net
 
-  # Kafka消息中间件
   kafka:
-    image: bitnami/kafka:latest
+    image: confluentinc/cp-kafka:7.5.3
     container_name: kafka
-    ports:
-      - "9092:9092"
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_LISTENERS: PLAINTEXT://:9092
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      ALLOW_PLAINTEXT_LISTENER: "yes"
+    hostname: kafka
+    restart: always
     depends_on:
       - zookeeper
+    ports:
+      - "9092:9092"
+      - "9999:9999"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENERS: PLAINTEXT://:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_JMX_PORT: 9999
+      KAFKA_JMX_HOSTNAME: localhost
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      TZ: Asia/Tokyo
+    volumes:
+      - kafka_data:/bitnami/kafka/data
+    healthcheck:
+      test: [ "CMD-SHELL", "kafka-topics --bootstrap-server localhost:9092 --list" ]
+      interval: 20s
+      timeout: 10s
+      retries: 10
+    networks:
+      - stock-net
 
-  # data-ingestor 微服务（抓取股票数据）
+  zoonavigator:
+    image: elkozmon/zoonavigator:latest
+    container_name: zoonavigator
+    ports:
+      - "9000:9000"
+    environment:
+      ZK_HOSTS: zookeeper:2181
+      TZ: Asia/Tokyo
+    depends_on:
+      - zookeeper
+    networks:
+      - stock-net
+
   data-ingestor:
     build: ./services/data-ingestor
     container_name: data-ingestor
@@ -63,87 +128,28 @@ services:
     volumes:
       - ./services/data-ingestor/app:/app/app
     environment:
-      - DB_HOST=mysql
-      - DB_PORT=3306
-      - DB_USER=stock_user
-      - DB_PASSWORD=stock_pass
-      - DB_NAME=stock_data
-      - REDIS_HOST=redis
-      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      DB_HOST: mysql
+      DB_PORT: 3306
+      DB_USER: stock_user
+      DB_PASSWORD: stock_pass
+      DB_NAME: stock_data
+      REDIS_HOST: redis
+      KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+      TZ: Asia/Tokyo
     depends_on:
       - mysql
       - redis
       - kafka
     ports:
       - "8001:8000"
-
-  # analyzer 微服务（数据清洗、指标分析）
-  analyzer:
-    build: ./services/analyzer
-    container_name: analyzer
-    restart: always
-    volumes:
-      - ./services/analyzer/app:/app/app
-    environment:
-      - DB_HOST=mysql
-      - REDIS_HOST=redis
-      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
-    depends_on:
-      - mysql
-      - redis
-      - kafka
-    ports:
-      - "8002:8000"
-
-  # model-service 微服务（AI推理）
-  model-service:
-    build: ./services/model-service
-    container_name: model-service
-    restart: always
-    volumes:
-      - ./services/model-service/app:/app/app
-    environment:
-      - DB_HOST=mysql
-      - REDIS_HOST=redis
-    depends_on:
-      - mysql
-      - redis
-    ports:
-      - "8003:8000"
-
-  # api-gateway 微服务（统一API接口）
-  api-gateway:
-    build: ./services/api-gateway
-    container_name: api-gateway
-    restart: always
-    volumes:
-      - ./services/api-gateway/app:/app/app
-    environment:
-      - DB_HOST=mysql
-      - REDIS_HOST=redis
-      - MODEL_SERVICE_URL=http://model-service:8000
-      - ANALYZER_SERVICE_URL=http://analyzer:8000
-    depends_on:
-      - mysql
-      - redis
-      - model-service
-      - analyzer
-    ports:
-      - "8000:8000"
-
-  # celery-worker（异步任务执行器）
-  celery-worker:
-    build: ./services/data-ingestor
-    container_name: celery-worker
-    command: celery -A app.tasks worker --loglevel=info
-    volumes:
-      - ./services/data-ingestor/app:/app/app
-    environment:
-      - DB_HOST=mysql
-      - REDIS_HOST=redis
-    depends_on:
-      - redis
-      - mysql
+    networks:
+      - stock-net
 
 volumes:
+  kafka_data:
+  redis_data:
   mysql_data:
+
+
+networks:
+  stock-net:
